--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,6 @@ services:
       - "19000:19000"
       - "19001:19001"
       - "19002:19002"
+      - "19006:19006" #WEB Mode
     environment:
       - EXPO_PACKAGER_HOSTNAME=192.168.0.13
