--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm run build --if-present
-    - run: npm install -g expo-cli react-native-cli
+    #- run: npm run build --if-present
+    - run: npm install -g expo-cli
     - run: expo install
+    - run: npm install
     - run: react-native bundle --platform native --dev false --entry-file App.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/
     - run: cd android && ./gradlew assembleDebug
       env:
