--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.2",
     "react-native-screens": "latest",
+    "react-native-fast-openpgp": "^1.3.0",
     "tcomb-form-native": "^0.6.20",
     "@expo/vector-icons": "^10.0.6",
     "react-redux": "^7.1.1",
@@ -33,7 +34,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
-    "tcomb-form-native": "^0.6.20"
+    "snyk": "^1.290.2"
   },
-  "private": true
+    "private": true,
+    "snyk": true
 }
